# stakgraph

./: .ast.json  .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Cross.toml  Dockerfile.standalone  README.md  download_cli.sh  install.sh  note-context-management.md
.github/workflows/: build-cli.yml  e2e-test.yml  (+11 more)
ast/: Cargo.toml
ast/src/testing/c/systems-programming/: CMakeLists.txt  README.md  file_dummy.c  lock_free_queue.c  memory_pool.c  memory_pool.h  method_chain_factory.c  thread_pool.c  thread_pool.h
ast/src/testing/c/systems-programming/tests/: integration_thread_memory.c  test_memory_pool.c
ast/src/testing/cpp/cuda/: CMakeLists.txt  main.cu  matrix_multiply.cu  vector_add.cu
ast/src/testing/cpp/cuda/advanced/: cooperative_groups.cu  cuda_graphs.cu  dynamic_parallelism.cu  tensor_cores.cu
ast/src/testing/cpp/cuda/common/: helper_cuda.h  helper_math.h
ast/src/testing/cpp/cuda/host/: device_query.cpp  error_handling.cuh  main.cu
ast/src/testing/cpp/cuda/kernels/: convolution.cu  matrix_multiply.cu  reduction.cu  tensor_ops.cu  vector_add.cu
ast/src/testing/cpp/cuda/memory/: pinned_memory.cu  shared_memory.cu  texture_memory.cu  unified_memory.cu
ast/src/testing/cpp/cuda/multi_gpu/: ipc_memory.cu  multi_device.cu  p2p_access.cu
ast/src/testing/cpp/cuda/streams/: async_ops.cu  concurrent_kernels.cu  stream_priorities.cu
ast/src/testing/cpp/cuda/tests/: integration_cuda_kernels.cu  test_vector_add.cu
ast/src/testing/cpp/web_api/: CMakeLists.txt  MethodChainFactory.cpp  anonymous_functions.cpp  main.cpp  model.cpp  model.h  routes.cpp
ast/src/testing/cpp/web_api/tests/: integration_routes.cpp  test_model.cpp
benchmarks/: benchmark_results.csv  search_queries.json
cli/: Cargo.toml
cli/examples/: README.md
cli/examples/task_manager/: run_changes.sh  run_deps.sh  run_parse.sh
cli/examples/task_manager/src/: main.rs  router.rs
cli/examples/task_manager/src/auth/: middleware.rs  mod.rs
cli/examples/task_manager/src/db/: query.rs  write.rs
cli/examples/task_manager/src/handlers/: create.rs  delete.rs  read.rs  update.rs
cli/examples/task_manager/src/models/: mod.rs  request.rs  task.rs
cli/examples/task_manager/src/validation/: validator.rs
cli/src/: args.rs  changes.rs  completions.rs  deps.rs  git.rs  impact.rs  main.rs  neo4j.rs  output.rs  overview.rs  parse.rs  progress.rs  render.rs  search.rs  summarize.rs  types.rs  utils.rs
cli/src/neo4j/: connection.rs  ingest.rs  map.rs  mod.rs  node.rs  parse_helpers.rs  schema.rs  search.rs
cli/tests/: cli.rs
cli/tests/cli/: angular.rs  c.rs  changes_cmd.rs  common.rs  completions_cmd.rs  cpp.rs  csharp.rs  deps_cmd.rs  flags.rs  go.rs  impact_cmd.rs  java.rs  kotlin.rs  nextjs.rs  overview_cmd.rs  php.rs  python.rs  react.rs  ruby.rs  rust.rs  search_cmd.rs  summarize_cmd.rs  svelte.rs  swift.rs  typescript.rs  unsupported.rs
gateway/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum  main.go  tygo.yaml
lsp/: Cargo.toml  Dockerfile  readme.md
mcp/: .dockerignore  .gitignore  Dockerfile  README.md  package.json  playwright.config.js  set-tests-dir.bat  set-tests-dir.sh  test-cache-control-curl.sh  tsconfig.build.json  tsconfig.json
scripts/: compare-context-modes.py
shared/: Cargo.toml
skill/: Cargo.toml
standalone/: Cargo.toml
vein/: .gitignore  AGENTS.md  EVAL_SPEC.md  SPEC.md  package.json  tsconfig.json
(+1597 files in other folders)
